// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toDiff operator emits basic changes 1`] = `
Array [
  Object {
    "isObject": false,
    "payload": 1,
    "type": "init",
  },
  Object {
    "payload": 2,
    "type": "update",
  },
  Object {
    "payload": 3,
    "type": "update",
  },
  Object {
    "payload": 4,
    "type": "update",
  },
  Object {
    "payload": 5,
    "type": "update",
  },
  Object {
    "type": "complete",
  },
]
`;

exports[`toDiff operator emits errors as well 1`] = `
Array [
  Object {
    "isObject": true,
    "payload": Object {
      "value": 1,
    },
    "type": "init",
  },
  Object {
    "payload": Array [
      DiffEdit {
        "kind": "E",
        "lhs": 1,
        "path": Array [
          "value",
        ],
        "rhs": 2,
      },
    ],
    "type": "update",
  },
  Object {
    "payload": "testing errors",
    "type": "error",
  },
]
`;

exports[`toDiff operator emits object changes 1`] = `
Array [
  Object {
    "isObject": true,
    "payload": Object {
      "value": 1,
    },
    "type": "init",
  },
  Object {
    "payload": Array [
      DiffEdit {
        "kind": "E",
        "lhs": 1,
        "path": Array [
          "value",
        ],
        "rhs": 2,
      },
    ],
    "type": "update",
  },
  Object {
    "payload": Array [
      DiffEdit {
        "kind": "E",
        "lhs": 2,
        "path": Array [
          "value",
        ],
        "rhs": 3,
      },
    ],
    "type": "update",
  },
  Object {
    "payload": Array [
      DiffEdit {
        "kind": "E",
        "lhs": 3,
        "path": Array [
          "value",
        ],
        "rhs": 4,
      },
    ],
    "type": "update",
  },
  Object {
    "payload": Array [
      DiffEdit {
        "kind": "E",
        "lhs": 4,
        "path": Array [
          "value",
        ],
        "rhs": 5,
      },
    ],
    "type": "update",
  },
  Object {
    "type": "complete",
  },
]
`;
